<resources>
    <string name="app_name" translatable="false">java52projesi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vektörel Bilişim A.Ş.</string>
    <string name="nav_header_subtitle">vektoreljavaali@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="baslik_bir">Activity ve Fragment</string>
    <string name="baslik_iki">RecyclerView </string>
    <string name="baslik_uc">Permissions</string>
    <string name="baslik_dort">Notifications</string>
    <string name="baslik_bes">Servis Tanımlama</string>
    <string name="baslik_alti">WebServices</string>
    <string name="baslik_yedi">Firebase Kullanımları</string>
    <string name="baslik_sekiz">Dil Entegrasyonu</string>
    <string name="baslik_dokuz">GoogleMaps</string>
    <string name="baslik_on">Chat Uygulaması</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>